# effective-horizon

./: .flake8  .gitignore  README.md  getting_started.ipynb  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: ci.yml  pypi.yml  test_readme_commands.yml
EffectiveHorizon.jl/: Manifest.toml  Project.toml
EffectiveHorizon.jl/src/: EffectiveHorizon.jl  analyze_mdp.jl  analyze_sticky_actions.jl  atari.jl  compression.jl  compute_gorp_bounds.jl  config.jl  construct_mdp.jl  distributional_value_iteration.jl  env.jl  gorp_bounds.jl  libenv.jl  minigrid.jl  occupancy_measures.jl  parallel_dict.jl  procgen.jl  run_gorp.jl  run_ucb.jl  saving.jl  set_deque.jl  value_iteration.jl
data/atari-head/freeway/: 79_RZ_3074177_Aug-18-11-46-29.tar.bz2  79_RZ_3074177_Aug-18-11-46-29.txt
data/atari_human_data/json/: freeway.json
data/bridge_dataset/: README.md
data/mdps/MiniGrid-Empty-16x16-DistanceShaped-v0/: consolidated.npz
data/mdps/MiniGrid-KeyCorridorS3R1-v0/: consolidated.npz  consolidated_analyze_sticky_0.25.json  consolidated_analyzed.json  consolidated_analyzed_sticky_0.25.json  consolidated_analyzed_value_dists_1.npy  consolidated_analyzed_value_dists_10.npy  consolidated_analyzed_value_dists_100.npy  consolidated_analyzed_value_dists_11.npy  consolidated_analyzed_value_dists_12.npy  consolidated_analyzed_value_dists_13.npy  consolidated_analyzed_value_dists_14.npy  consolidated_analyzed_value_dists_15.npy  consolidated_analyzed_value_dists_16.npy  consolidated_analyzed_value_dists_17.npy  consolidated_analyzed_value_dists_18.npy  consolidated_analyzed_value_dists_19.npy  consolidated_analyzed_value_dists_2.npy  consolidated_analyzed_value_dists_20.npy  consolidated_analyzed_value_dists_21.npy  consolidated_analyzed_value_dists_22.npy  (+85 more)
effective_horizon/: __init__.py  atari_head.py  image_utils.py  impala_cnn.py  mdp_utils.py  os_utils.py  training_utils.py
effective_horizon/agents/: __init__.py  bc.py  dqn.py  gorp.py
effective_horizon/envs/: __init__.py  atari.py  deterministic_registration.py  minigrid.py  procgen.py  utils.py  wrappers.py
effective_horizon/experiments/: construct_tabular_policy.py  convert_atari_head_data.py  convert_atari_mdp_to_framestack.py  filter_to_minimal_actions.py  train.py  train_bc.py
effective_horizon/rllib/: __init__.py  models.py  train.py  train_bc.py  training_utils.py
effective_horizon/sb3/: models.py  train.py
effective_horizon/scripts/: construct_tabular_policy.py  convert_atari_head_data.py  convert_atari_mdp_to_framestack.py
src/binom/: CMakeLists.txt  binom.cpp
stubs/ray/: __init__.pyi
stubs_rllib/rllib/: __init__.pyi
tests/: conftest.py  test_deterministic_mdps.py  test_julia_scripts.py  test_python_scripts.py  test_training.py  test_training_rllib.py  test_training_sb3.py
(+162 files in other folders)
